@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T16:20:43Z",
-  "count_outdated" : 711,
-  "uniques_outdated" : 405,
+  "timestamp" : "2023-07-26T01:25:35Z",
+  "count_outdated" : 714,
+  "uniques_outdated" : 407,
   "count" : 748,
   "uniques" : 428,
   "clones" : [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 1,
